--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,12 @@
       "Entity\\": "src/"
     }
   },
+
+  "autoload-dev": {
+    "psr-4": {
+      "Usage\\": "usage/src/"
+    }
+  },
   "require": {
     "doctrine/dbal": "^2.10",
     "doctrine/orm": "^2.7",
