--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "doctrine/orm": "^2.7",
     "ext-pdo": "*",
     "mongodb/mongodb": "^1.6",
-    "ext-mongodb": "*"
+    "ext-mongodb": "*",
+    "guzzlehttp/psr7": "^1.6"
   },
   "require-dev": {
     "symfony/var-dumper": "^5.0",
