--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "ext-pdo": "*",
     "mongodb/mongodb": "^1.6",
     "ext-mongodb": "*",
-    "guzzlehttp/psr7": "^1.6"
+    "guzzlehttp/psr7": "^1.6",
+    "robmorgan/phinx": "^0.12.1"
   },
   "require-dev": {
     "symfony/var-dumper": "^5.0",
