--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "psr/log": "^1.1",
     "xudid/querybuilder": ">=0.0.0.1",
     "doctrine/inflector": "^2.0",
-    "xudid/entitycontracts": ">=0.0.0.1"
+    "xudid/entitycontracts": "0.0.0.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.0"
